# zephyr_3d_game_template

./: CMakeLists.txt  prj.conf
boards/: native_sim.conf  promicro_nrf52840_nrf52840_uf2.overlay  rpi_pico.overlay
include/: 3dlib.h  building_01.h
pl/: clip.c  config.h  framebuffer_effects.c  framebuffer_effects.h  gfx.c  hal.c  imode.c  importer.c  math.c  pl.c  pl.h
src/: main.c
tools/: obj2c.py  obj2ctexture.py
